[gd_scene load_steps=3 format=3 uid="uid://dltmtfearhooo"]

[ext_resource type="Script" path="res://scripts/ui/target_row.gd" id="1_vjw8w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g80mp"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TargetRow" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_g80mp")
script = ExtResource("1_vjw8w")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TargetRow" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Name" type="Label" parent="Margin/TargetRow"]
layout_mode = 2
text = "Target"

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/TargetRow"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 9
alignment = 2

[node name="Edit" type="Button" parent="Margin/TargetRow/HBoxContainer"]
layout_mode = 2
text = "Edit"

[node name="Delete" type="Button" parent="Margin/TargetRow/HBoxContainer"]
layout_mode = 2
text = "Delete"

[connection signal="pressed" from="Margin/TargetRow/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="Margin/TargetRow/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
